tests/negative/issue3161/Stdlib/Trait/Ord.juvix
module Stdlib.Trait.Ord;

import Stdlib.Data.Fixity open;
